--- a/package.json
+++ b/package.json
@@ -9,6 +9,22 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
     "vite": "^5.0.8"
-  }
+  },
+  "main": "main.js",
+  "dependencies": {
+    "esbuild": "^0.19.9",
+    "eslint-config-standard": "^17.1.0",
+    "fsevents": "^2.3.3",
+    "nanoid": "^3.3.7",
+    "picocolors": "^1.0.0",
+    "postcss": "^8.4.32",
+    "rollup": "^4.9.1",
+    "source-map-js": "^1.0.2"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
