--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "devDependencies": {
     "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.4.0",
+    "eslint-plugin-promise": "^6.1.1",
     "vite": "^5.0.8"
   },
   "main": "main.js",
   "dependencies": {
     "esbuild": "^0.19.9",
-    "eslint-config-standard": "^17.1.0",
     "fsevents": "^2.3.3",
     "nanoid": "^3.3.7",
     "picocolors": "^1.0.0",
