chore: remove stylelint

--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "eslint-plugin-n": "^16.4.0",
     "eslint-plugin-promise": "^6.1.1",
     "sass": "^1.69.5",
-    "stylelint": "^16.0.2",
-    "stylelint-config-standard-scss": "^12.0.0",
     "vite": "^5.0.8"
   },
   "main": "main.js",
@@ -27,8 +25,7 @@
     "picocolors": "^1.0.0",
     "postcss": "^8.4.32",
     "rollup": "^4.9.1",
-    "source-map-js": "^1.0.2",
-    "stylelint-scss": "^6.0.0"
+    "source-map-js": "^1.0.2"
   },
   "keywords": [],
   "author": "",
