--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,12 @@
     "browser": true,
     "es2021": true
   },
-  "extends": "standard",
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
-    "semi": [2, "always"]
+    "semi": "off"
   }
 }
