--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "extends": ["eslint:recommended", "standard"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
-    "semi": "error"
+    "semi": [2, "always"],
+    "space-before-function-paren": 0
   }
 }
